snmp_exporter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-snmp
  namespace: monitoring
  labels:
    app: prometheus-snmp
spec:
  replicas: 1
  template:
    metadata:
      name: prometheus-snmp
      labels:
        app: prometheus-snmp
    spec:
      containers:
      - name: snmp-exporter
        image: prom/snmp-exporter
        ports:
        - name: snmpexporter
          containerPort: 9116
