snmp_exporter_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-snmp
  name: prometheus-snmp
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: snmpexporter
    port: 9116
    targetPort:
  selector:
    app: prometheus-snmp
